--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script>
-    alert('Hello word from JS')
+<script src="./bai2/bai2.js">
+    
 </script>
 <body>
     <h1>Hello word from HTML</h1>
